--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -215,7 +215,6 @@ set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
-set_real_ip_from 168.119.186.172;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
 set_real_ip_from 171.25.193.235;
@@ -658,7 +657,6 @@ set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.99.149.111;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
-set_real_ip_from 193.107.109.16;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -996,7 +994,6 @@ set_real_ip_from 23.133.204.10;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
-set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.254;
@@ -1008,7 +1005,6 @@ set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
-set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
@@ -1029,7 +1025,6 @@ set_real_ip_from 23.154.177.30;
 set_real_ip_from 23.154.177.31;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
-set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.184.48.254;
@@ -1083,7 +1078,6 @@ set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:18:f84a::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
-set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fef9:100:1100::199;
@@ -1285,7 +1279,6 @@ set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
-set_real_ip_from 2a01:4f8:c012:6ab1::1;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
 set_real_ip_from 2a01:4ff:f0:d369::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
@@ -1337,6 +1330,7 @@ set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+set_real_ip_from 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
 set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
@@ -1841,6 +1835,7 @@ set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.250.242.141;
 set_real_ip_from 46.30.188.218;
+set_real_ip_from 46.38.243.210;
 set_real_ip_from 47.254.142.180;
 set_real_ip_from 47.89.193.230;
 set_real_ip_from 50.118.225.222;
