--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -126,7 +126,6 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
-deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -691,8 +690,10 @@ deny 194.163.130.99;
 deny 194.163.157.49;
 deny 194.26.192.77;
 deny 194.53.137.156;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
+deny 195.240.214.116;
 deny 195.47.238.176;
 deny 195.47.238.177;
 deny 195.47.238.178;
@@ -1036,6 +1037,7 @@ deny 23.191.200.3;
 deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
+deny 23.236.122.193;
 deny 23.94.211.25;
 deny 23.94.36.167;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
@@ -1140,7 +1142,6 @@ deny 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
 deny 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
-deny 2605:6400:30:f77f:f41c:2bce:7d61:210e;
 deny 2605:6400:30:f77f:f41c:2bce:7d61:f318;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -1356,7 +1357,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1587,6 +1587,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:2500:571:7ca:7683:56ca:e852:76a1;
 deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
@@ -1604,6 +1605,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1618,7 +1620,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1665,6 +1666,7 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:233;
@@ -1745,6 +1747,7 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.13;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1821,6 +1824,7 @@ deny 45.9.148.50;
 deny 45.9.168.108;
 deny 45.9.168.113;
 deny 45.9.168.22;
+deny 45.94.31.198;
 deny 45.94.31.68;
 deny 45.95.169.130;
 deny 45.95.169.16;
@@ -1853,7 +1857,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1936,6 +1939,7 @@ deny 84.16.224.227;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 84.247.183.128;
+deny 84.252.120.131;
 deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.54.28.49;
