--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -204,7 +204,7 @@ set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
-set_real_ip_from 2605:6400:30:f77f:f41c:2bce:7d61:f318;
+set_real_ip_from 2605:6400:30:f77f:f41c:2bce:7d61:210e;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7ca::2;
@@ -344,6 +344,7 @@ set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
+set_real_ip_from 2a01:4ff:1f0:8ae6::1;
 set_real_ip_from 2a01:4ff:f0:d369::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
@@ -666,7 +667,6 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -681,6 +681,7 @@ set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0d:c580:1:3:95::1;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
